<resources>
    <string name="app_name">Lunch Tray</string>
    <string name="start_order">START ORDER</string>

    <string name="main_dish_heading1">Cauliflower</string>
    <string name="main_dish_price1">150.00</string>
    <string name="main_dish_body1">Whole cauliflower, brined, roasted, and deep fried</string>

    <string name="main_dish_heading2">Three Bean Chili</string>
    <string name="main_dish_price2">100.00</string>
    <string name="main_dish_body2">Black beans, red beans, kidney beans, slow cooked, topped with onion</string>

    <string name="main_dish_heading3">Mushroom Pasta</string>
    <string name="main_dish_price3">75.50</string>
    <string name="main_dish_body3">Penne pasta, mushrooms, basil, with plum tomatoes cooked in garlic and olive oil</string>

    <string name="main_dish_heading4">Spicy Black Bean Skillet</string>
    <string name="main_dish_price4">250.50</string>
    <string name="main_dish_body4">Seasonal vegetables, black beans, house spice blend, served with avocado and quick pickled onions</string>


    <string name="side_dish_heading1">Summer Salad</string>
    <string name="side_dish_price1">25.50</string>
    <string name="side_dish_body1">Heirloom tomatoes, butter lettuce, peaches, avocado, balsamic dressing</string>

    <string name="side_dish_heading2">Butternut Squash Soup</string>
    <string name="side_dish_price2">50.00</string>
    <string name="side_dish_body2">Roasted butternut squash, roasted peppers, chili oil</string>

    <string name="side_dish_heading3">Spicy Potatoes</string>
    <string name="side_dish_price3">75.25</string>
    <string name="side_dish_body3">Marble potatoes, roasted, and fried in house spice blend</string>

    <string name="side_dish_heading4">Coconut Rice</string>
    <string name="side_dish_price4">125.50</string>
    <string name="side_dish_body4">Rice, coconut milk, lime, and sugar</string>

    <string name="extra_dish_heading1">Lunch Roll</string>
    <string name="extra_dish_price1">35.50</string>
    <string name="extra_dish_body1">Fresh baked roll made in house</string>

    <string name="extra_dish_heading2">Mixed Berries</string>
    <string name="extra_dish_price2">80.00</string>
    <string name="extra_dish_body2">Strawberries, blueberries, raspberries, and huckleberries</string>

    <string name="extra_dish_heading3">Pickled Veggies</string>
    <string name="extra_dish_price3">110.50</string>
    <string name="extra_dish_body3">Pickled cucumbers and carrots made in house</string>

    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="sub_total">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="submit_order">Submit Order</string>
    <string name="order_summary">ORDER SUMMARY</string>

</resources>