<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainDishFragment"
            type="com.rabarka.lunchtray.ui.MainDishFragment" />

        <variable
            name="viewModel"
            type="com.rabarka.lunchtray.LunchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.MainDishFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/firstCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.mainDishName.equals(@string/main_dish_heading1)}"
                    android:onClick="@{() -> viewModel.setMainDish(@string/main_dish_heading1,@string/main_dish_price1)}"
                    android:text="@string/main_dish_heading1" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_body1" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_price1" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/firstDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstCard" />


        <androidx.cardview.widget.CardView
            android:id="@+id/secondCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstDivider">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.mainDishName.equals(@string/main_dish_heading2)}"
                    android:onClick="@{() -> viewModel.setMainDish(@string/main_dish_heading2,@string/main_dish_price2)}"
                    android:text="@string/main_dish_heading2" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_body2" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_price2" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/thirdDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/thirdCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdDivider">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.mainDishName.equals(@string/main_dish_heading3)}"
                    android:onClick="@{() -> viewModel.setMainDish(@string/main_dish_heading3,@string/main_dish_price3)}"
                    android:text="@string/main_dish_heading3" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_body3" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_price3" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/fourthDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fourthCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthDivider">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:checked="@{viewModel.mainDishName.equals(@string/main_dish_heading4)}"
                    android:onClick="@{() -> viewModel.setMainDish(@string/main_dish_heading4,@string/main_dish_price4)}"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_heading4" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_body4" />

                <TextView
                    style="@style/MainDishCardTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dish_price4" />

            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/lastDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthCard" />

        <TextView
            android:id="@+id/totalTv"
            style="@style/totalTextviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{@string/sub_total(viewModel.subTotalPrice.toString)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthCard"
            tools:text="Subtotal: $7.55" />

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> mainDishFragment.cancelOrder()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalTv" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> mainDishFragment.goNextScreen()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/totalTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>